radiobtn para sim/nao no cadastro acolhida

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,18 @@
     <string name="clique_nos_cards_abaixo_para_mais_detalhes_sobre_as_casas_de_acolhida">Clique nos cards abaixo para mais detalhes sobre as casas de acolhida! :)</string>
     <string name="text_call">Clique no telefone para ligar na casa de acolhida!</string>
     <string name="deleg_call">Clique no telefone para ligar na delegacia!</string>
+    <string name="confirmar_aprova_o">Confirmar aprovação?</string>
+    <string name="quer_mesmo_aprovar_essa_casa">Quer mesmo aprovar essa casa?</string>
+    <string name="sim">Sim</string>
+    <string name="n_o">Não</string>
+    <string name="esta_casa_faz_acolhimento">Esta casa faz acolhimento?</string>
+    <string name="nome_da_casa_acolh">*Nome da casa:</string>
+    <string name="sugest_o_casa_acolhida">Sugestão Casa Acolhida</string>
+    <string name="atividades_que_fazem">Atividades que fazem:</string>
+    <string name="endere_o_acolh">Endereço:</string>
+    <string name="p_blico_alvo_acol">Público alvo:</string>
+    <string name="telefone_acol">*Telefone:</string>
+    <string name="enviar_sugest_o">Enviar Sugestão</string>
+    <string name="e_mail_cad">E-mail:</string>
+    <string name="cadastrar_casa">Cadastrar Casa</string>
 </resources>
