ajustes cadastro acolhida

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,7 +85,7 @@
     <string name="esta_casa_faz_acolhimento">Esta casa faz acolhimento?</string>
     <string name="nome_da_casa_acolh">*Nome da casa:</string>
     <string name="sugest_o_casa_acolhida">Sugestão Casa Acolhida</string>
-    <string name="atividades_que_fazem">Atividades que fazem:</string>
+    <string name="atividades_que_fazem">Atividades:</string>
     <string name="endere_o_acolh">Endereço:</string>
     <string name="p_blico_alvo_acol">Público alvo:</string>
     <string name="telefone_acol">*Telefone:</string>
