--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="la_diversite_title">La Diversité</string>
     <string name="ou_cadastre_se">ou cadastre-se</string>
     <string name="login">Login</string>
-    <string name="cria_sua_conta">Cria sua\n conta :)</string>
+    <string name="cria_sua_conta">Crie sua\n conta :)</string>
     <string name="entre_com_um_e_mail_v_lido">Entre com um e-mail válido</string>
     <string name="informe_uma_senha">Informe uma senha</string>
     <string name="cadastrar">Cadastrar</string>
