ajuste de labels para admin em cadastrar casa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,6 @@
     <string name="contato_55_11_98558_2156">Contato: +55 11 98558-2156</string>
     <string name="rea_psicologia_social">Área: Psicologia Social</string>
     <string name="aamancio_psi">\@AAmancio_psi</string>
+    <string name="cadastrar_casa_admin">Cadastrar Casa</string>
+    <string name="cadastrar_admin_btn">Cadastrar</string>
 </resources>
